# dodo

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES.md  build.rs  deny.toml
.cargo/: config.toml
.claude/skills/dodo-build-validate/: SKILL.md
.claude/skills/dodo-i18n-text/: SKILL.md
.claude/skills/dodo-theming-settings/: SKILL.md
.claude/skills/dodo-tool-view/: SKILL.md
.claude/skills/gpui-component-recipes/: SKILL.md
.github/actions/linux-build-deps/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: analysis.yml  ci.yml  release-profile.yml  release.yml
assets/linux/: dodo.desktop
assets/macos/: dodo.icns
docs/: build-optimization.md  release.md
scripts/: generate-icons.py  macos-app-bundle.sh  make-icon-master.py  package.ps1  package.sh  verify-release.sh
src/: app.rs  app_icon.rs  assets.rs  build_info.rs  encoder_decoder.rs  i18n.rs  i18n_lint.rs  json_formatter.rs  layout.rs  main.rs  settings.rs
src/api_explorer/: mod.rs
src/api_explorer/components/: empty_state.rs  key_value_table.rs  later_step.rs  mod.rs  status_tag.rs
src/api_explorer/models/: auth.rs  body.rs  collection.rs  exchange.rs  json_tree.rs  key_value.rs  method.rs  mod.rs  request.rs  script_template.rs  snapshot.rs
src/api_explorer/services/: collection_import.rs  collection_store.rs  file_export.rs  mod.rs
src/api_explorer/services/http/: auth.rs  body.rs  classify.rs  client.rs  cookies.rs  headers.rs  mod.rs  prepare.rs  request_body.rs
src/api_explorer/state/: collection.rs  history.rs  mod.rs  request.rs  response.rs  tab.rs  ui.rs
src/api_explorer/views/: collections_panel.rs  explorer.rs  history_panel.rs  mod.rs  request_auth.rs  request_body.rs  request_editor.rs  request_scripts.rs  request_tabs.rs  response_viewer.rs
src/docker/: mod.rs
src/docker/components/: mod.rs  search_bar.rs  skeleton.rs  states.rs  status_badge.rs  toolbar.rs
src/docker/models/: container.rs  image.rs  inspect.rs  logs.rs  mod.rs  network.rs  port.rs  size.rs  stats.rs  status.rs  time.rs  usage.rs  volume.rs
src/docker/services/: engine.rs  mod.rs
src/docker/state/: containers.rs  detail.rs  diff.rs  filters.rs  focus.rs  grouping.rs  mod.rs  resource.rs  selection.rs
src/docker/views/: containers.rs  detail.rs  docker.rs  images.rs  mod.rs  networks.rs  volumes.rs  widgets.rs
