[package]
name = "dodo"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
# `tree-sitter` (JSON), `tree-sitter-html` and `tree-sitter-yaml` are what make
# the code editor actually colour text: without any of them the library's
# highlighter compiles to a stub that returns no highlights. Three grammars
# rather than the ~35 of `tree-sitter-languages`, chosen for what an HTTP
# response body actually is. Everything else degrades to plain text.
gpui-component = { git = "https://github.com/longbridge/gpui-component", features = [
    "tree-sitter",
    "tree-sitter-html",
    "tree-sitter-yaml",
] }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
anyhow = "1.0"
# The HTTP client behind the API Explorer. `default-features = false` drops
# `default-tls`, `charset` and `system-proxy`; `rustls` then selects rustls with
# the platform certificate verifier, so no OpenSSL is required to build.
# `blocking` is deliberate: `services::Transport` is a blocking trait that only
# ever runs on GPUI's background executor, never on the UI thread.
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "blocking",
    "http2",
] }
rust-embed = "8.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
percent-encoding = "2.3.2"
nucleo-matcher = "0.3"
unicode-normalization = "0.1"
