[package]
name = "dodo"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
# `tree-sitter` (JSON), `tree-sitter-html` and `tree-sitter-yaml` are what make
# the code editor actually colour text: without any of them the library's
# highlighter compiles to a stub that returns no highlights. Three grammars
# rather than the ~35 of `tree-sitter-languages`, chosen for what an HTTP
# response body actually is. Everything else degrades to plain text.
gpui-component = { git = "https://github.com/longbridge/gpui-component", features = [
    "tree-sitter",
    "tree-sitter-html",
    "tree-sitter-yaml",
] }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
anyhow = "1.0"
# The HTTP client behind the API Explorer. `default-features = false` drops
# `default-tls`, `charset` and `system-proxy`; `rustls` then selects rustls with
# the platform certificate verifier, so no OpenSSL is required to build.
# `blocking` is deliberate: `services::Transport` is a blocking trait that only
# ever runs on GPUI's background executor, never on the UI thread.
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "blocking",
    "http2",
] }
rust-embed = "8.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
percent-encoding = "2.3.2"
nucleo-matcher = "0.3"
unicode-normalization = "0.1"
# The Docker Engine API client behind the Docker module. Default features
# already carry `hyperlocal` (the local unix-socket connector) and pointedly do
# NOT enable `ssl`/`rustls` — the local socket needs no TLS, so this keeps the
# project's rustls-only, OpenSSL-free posture (no `openssl-sys`, no `native-tls`).
# Only `docker::services` may name this crate, mirroring `services::Transport`
# and `reqwest`.
bollard = "0.21.0"
# bollard is async on tokio, unlike the API Explorer's blocking `reqwest`. A
# single multi-thread runtime, built once and owned by `docker::services`, drives
# every bollard call via `Runtime::block_on` from GPUI's background executor — so
# the blocking-by-contract discipline is preserved and no async runtime touches
# the UI thread. Minimal feature set: the multi-thread scheduler plus the net and
# time drivers `enable_all()` needs for the unix-socket IO.
tokio = { version = "1.53.1", default-features = false, features = ["rt-multi-thread", "net", "time"] }
# Only to consume bollard's container-stats `Stream` (two frames, to compute a
# CPU delta) inside `docker::services`. Already in the tree transitively via
# bollard, so it adds no build cost; pure Rust, no TLS.
futures-util = "0.3.33"
